=== master

* Run builds against more versions of Ruby and ActiveSupport

=== 1.0
updated to RSpec 3 (thanks @drewboardman)
taza now accepts erb settings.yml (thanks @drewboardman)

=== 0.9.1.2
Experimental pure Webdriver support
Fix app generator (thanks @certonaqa)

=== 0.9.1

* Bundler support on the project itself
* Fixing generators
* Lots of small bug fixes with Ruby 1.9

=== 0.9.0

* Watir-Webdriver support (use driver watir_webdriver)
* Ruby 1.9 support
* RSpec 2.x support
* Some minor bugfixes

=== 0.8.7

* Added script/console Utility
* Integration with user_choices
* Attach to open IE instance

=== 0.8.6

* Added feature to keep browser open after tests
* Added access to multiple levels in Fixtures
* Added feature to return a Hash in Fixtures 
* lib/flows is no longer generated
* Page module filters for elements inside page modules

=== 0.8.5

* Fixed Fixtures bugs
* Fixture entities can be accessed like hashes(foo[:bar])
* Functional tests are now 'isolation' tests
* Added Page-Module feature

=== 0.8.4

* Added one to many relationship in fixtures
* Added Templating of fixtures
* Added Site Secific fixtures
* Spec Rake Tasks are now generated Recursively

=== 0.8.2 / 2009-01-11

* Added Partials
* Added Preliminary Fixture Support
* Fixed horrible infinite loop bug in Filters
* Added Configurability to a Taza projects Rakefile

=== 0.8.0 / 2008-11-23

Taza is a web application testing framework meant to be used with browsed-based testing libraries like WATIR or Selenium

Not all web applications can be written in Ruby, unfortunately. When you aren't testing an application that was written with testing in mind Taza can provide a structured and opionated way to do browser-based testing.

* Sites have Pages
* Sites have Flows that move through Pages
* Pages have elements and filters to define simple ways of interacting with them
* Pages have tests/specs that help chip away at the dreaded 0% Coverage Beast™

* Features
  * Generate a Taza project easily