@@ -1,5 +1,0 @@
-source "https://rubygems.org"
-
-gemspec
-
-gem 'activesupport', '~> 3.2.0'
