@@ -2,4 +2,4 @@ source "https://rubygems.org"
 
 gemspec
 
-gem 'activesupport', '~> 4.0.0'
+gem 'activesupport', '~> 4.0.2'
